src/objects/Area__c.object
<CustomObject>
    <description>Object to associate Accounts with Territories</description>
    <fields>
        <fullName>Area_Postcode__c</fullName>
        <description>Postcode of the area - used for matching UK postcodes to the correct Area</description>
        <inlineHelpText>Enter Postcode of the area</inlineHelpText>
        <label>Area Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Area Country</description>
        <inlineHelpText>Enter Country</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postcode_District__c</fullName>
        <description>Postcode District</description>
        <inlineHelpText>Enter Postcode District</inlineHelpText>
        <label>Postcode District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <description>Populated by territory manager</description>
        <formula>Territory__r.Territory_Manager__r.FirstName +&quot; &quot;+ Territory__r.Territory_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field populated automatically from related territory</inlineHelpText>
        <label>Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to territory</description>
        <inlineHelpText>Search for related territory</inlineHelpText>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Areas</relationshipLabel>
        <relationshipName>Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of account manager who will be responsible for this Area</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>AE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Delegate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Area</label>
    <listViews>
        <fullName>AdHoc</fullName>
        <columns>NAME</columns>
        <columns>Territory__c</columns>
        <columns>Territory_Owner__c</columns>
        <columns>Type__c</columns>
        <columns>Postcode_District__c</columns>
        <columns>Area_Postcode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area_Postcode__c</field>
            <operation>contains</operation>
            <value>N</value>
        </filters>
        <label>AdHoc</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Territory_Owner__c</columns>
        <columns>Territory__c</columns>
        <columns>Area_Postcode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AREA-{0000000}</displayFormat>
        <label>Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Areas</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Postcode_only_if_UK</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
    (AND  ( (TEXT( Country__c) != &apos;United Kingdom&apos; ) , (Area_Postcode__c !=&apos;&apos;)))
   ,
    (AND   ((TEXT( Country__c) = &apos;United Kingdom&apos;), (Area_Postcode__c = &apos;&apos;)))
   
)</errorConditionFormula>
        <errorMessage>Postcode *must* be set if country is United Kingdom, and cannot be set if Country is *NOT* United Kingdom</errorMessage>
    </validationRules>
</CustomObject>